--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "*",
+        "nesbot/carbon": "^2.62",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
