--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue-custom-scrollbar": "^1.4.4",
         "vue-horizontal-list": "^1.3.0",
         "vue-multiselect": "^2.1.6",
+        "vue-paystack": "^2.0.4",
         "vue-pdf-app-snepsilon": "^2.3.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.4.3",
