--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
         "vue-horizontal-list": "^1.3.0",
         "vue-multiselect": "^2.1.6",
         "vue-paystack": "^2.0.4",
+        "vue-pdf-app": "^2.1.0",
         "vue-pdf-app-snepsilon": "^2.3.1",
+        "vue-pdf-embed": "^1.1.5",
+        "vue-pdf-reader": "^0.2.9",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.4.3",
         "vue-signature-pad": "^2.0.5",
