--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "^15.10.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
@@ -31,11 +30,13 @@
         "chart.js": "^2.9.3",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.27.0",
+        "pdfviewer": "^1.1.1",
         "sweetalert2": "^9.17.1",
         "v-chartist": "^0.1.6",
         "vform": "^1.0.1",
         "vue-chartkick": "^0.6.1",
         "vue-horizontal-list": "^1.3.0",
+        "vue-loader": "^15.10.2",
         "vue-paystack": "^2.0.4",
         "vue-pdf-app": "^2.1.0",
         "vue-pdf-app-snepsilon": "^2.3.1",
