--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "v-chartist": "^0.1.6",
         "vform": "^1.0.1",
         "vue-chartkick": "^0.6.1",
+        "vue-excel-editor": "^1.5.19",
         "vue-horizontal-list": "^1.3.0",
         "vue-loader": "^15.10.2",
         "vue-paystack": "^2.0.4",
